--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,11 @@ edge-tts>=6.0
 feedgen>=0.9.0
 aiofiles>=23.0.0
 flask>=3.0.0
+flask-cors>=4.0.0
 qrcode>=7.4.0
 pillow>=10.0.0
+gunicorn>=21.0.0
+PyMySQL>=1.1.0
+azure-cognitiveservices-speech>=1.34.0
+boto3>=1.34.0
+python-dotenv>=1.0.0
