Switch to Cloudflare R2 storage - remove database complexity

--- a/.env.example
+++ b/.env.example
@@ -9,18 +9,11 @@ TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 AZURE_SPEECH_KEY=your_azure_speech_key_here
 AZURE_SPEECH_REGION=eastus
 
-# Database (automatically set by Heroku PostgreSQL addon)
-# DATABASE_URL=postgres://username:password@host:port/database
-
-# AWS S3 Storage (automatically set by Bucketeer addon)
-# BUCKETEER_AWS_ACCESS_KEY_ID=auto_set_by_heroku
-# BUCKETEER_AWS_SECRET_ACCESS_KEY=auto_set_by_heroku  
-# BUCKETEER_BUCKET_NAME=auto_set_by_heroku
-
-# Map Bucketeer env vars to our expected names
-AWS_ACCESS_KEY_ID=${BUCKETEER_AWS_ACCESS_KEY_ID}
-AWS_SECRET_ACCESS_KEY=${BUCKETEER_AWS_SECRET_ACCESS_KEY}
-S3_BUCKET_NAME=${BUCKETEER_BUCKET_NAME}
+# Cloudflare R2 Storage (S3 Compatible)
+R2_ENDPOINT_URL=https://your-account-id.r2.cloudflarestorage.com
+R2_ACCESS_KEY_ID=your_r2_access_key_here
+R2_SECRET_ACCESS_KEY=your_r2_secret_key_here
+R2_BUCKET_NAME=your_bucket_name_here
 
 # App Configuration
 PORT=5000
