Fix audiobook streaming playback and add progress tracking
🎵 Fixed Android MediaPlayer streaming issues:
- Simplified HTTP URL handling for better compatibility
- Added network security config for Heroku HTTPS
- Implemented retry logic with fallback URLs
- Removed auto-skip behavior that masked errors

📊 Added progress tracking features:
- Real-time progress bar updates during playback
- Chapter duration display (e.g. '12 mins 23 seconds')
- Current time and total time display
- Proper seek bar functionality

🔧 Backend improvements:
- Enhanced Flask streaming endpoint with range request support
- Better error handling and CORS headers
- Improved HTTP 206 partial content responses

🛠️ Debug tools:
- Added DebugActivity for URL testing (long-press sync button)
- Pre-filled with working streaming URL for testing
- Play/stop controls for direct MediaPlayer testing

✅ Verified working with streaming URL:
https://epub-audiobook-service-ab00bb696e09.herokuapp.com/api/stream/1141127507/3da9b6f3-3eae-4a06-9687-9e7743817194/chapter_1.mp3

--- a/AudiobookPlayer/app/src/main/AndroidManifest.xml
+++ b/AudiobookPlayer/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AudiobookPlayer"
         android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
         
         <!-- Main Activity -->
@@ -61,6 +62,12 @@
         <!-- QR Code Scanner Activity -->
         <activity
             android:name=".activities.QRScannerActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AudiobookPlayer" />
+        
+        <!-- Debug Activity -->
+        <activity
+            android:name=".activities.DebugActivity"
             android:exported="false"
             android:theme="@style/Theme.AudiobookPlayer" />
         
